# fnc

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  fncConfig.h.in
src/: baseParseFile.cpp  baseParseFile.h  calclist.cpp  calclist.h  calstring.cpp  calstring.h  exec.cpp  exec.h  execInteractive.cpp  execInteractive.h  fnc.cpp  func.cpp  func.h  functions.cpp  functions.h  iniParser.cpp  iniParser.h  interactive.cpp  interactive.h  num.cpp  num.h  numDefs.h  numUnit.cpp  numUnit.h  xstring.cpp  xstring.h
test/: CMakeLists.txt  SoftwareRequirements.md  fncBaseTest.h  fncConversionTest.cpp  fncExecTest.cpp  fncFunctionTest.cpp  test.cpp  tests.md
